--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,4 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
-org.gradle.java.home=c:/Users/jschartner/documents/java/android/jdk-11.0.16.1/
+#org.gradle.java.home=c:/Users/jschartner/documents/java/android/jdk-11.0.16.1/
