--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -15,9 +17,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Youtube"
+        android:requestLegacyExternalStorage="true"
         tools:targetApi="31">
+        <receiver android:name=".RunningDownload"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="APP_SPECIFIC_BROADCAST"></action>
+            </intent-filter>
+        </receiver>
         <activity
-            android:name=".PlayerActivity"
+            android:name=".FullscreenPlayerActivity"
             android:screenOrientation="landscape"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
             android:launchMode="singleTop"
@@ -25,9 +34,14 @@
             android:theme="@style/Theme.AppCompat.NoActionBar"
             android:exported="true">
         </activity>
+        <activity android:name=".PlayerActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true">
+        </activity>
         <activity
             android:name=".MainActivity"
-	    android:screenOrientation="portrait"
+	        android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
