--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,13 @@
         android:theme="@style/Theme.Youtube"
         android:requestLegacyExternalStorage="true"
         tools:targetApi="31">
+        <receiver android:name=".JexoPlayer" />
+        <service android:name=".JexoPlayer$MediaService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.media.browse.MediaBrowserService" />
+            </intent-filter>
+        </service>
         <receiver android:name=".RunningDownload"
             android:exported="true">
             <intent-filter>
@@ -26,23 +33,10 @@
             </intent-filter>
         </receiver>
         <activity
-            android:name=".FullscreenPlayerActivity"
-            android:screenOrientation="landscape"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
-            android:launchMode="singleTop"
-            android:label=""
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:exported="true">
-        </activity>
-        <activity android:name=".PlayerActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:exported="true">
-        </activity>
-        <activity
             android:name=".MainActivity"
 	        android:screenOrientation="portrait"
-            android:exported="true">
+            android:exported="true"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
