--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,11 @@ android {
         viewBinding true
     }
 }
-
 dependencies {
     implementation "androidx.navigation:navigation-fragment:2.5.3"
     implementation "androidx.navigation:navigation-ui:2.5.3"
+
+    implementation 'org.chromium.net:cronet-embedded:108.5359.79'
 
     implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
     implementation 'com.google.android.exoplayer:extension-cronet:2.18.1'
@@ -60,3 +61,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+
+
