--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,18 +40,11 @@
                 android:value="" />
         </activity>
 
-        <activity
-            android:name=".TvMainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
-            </intent-filter>
-        </activity>
 
-        <receiver android:name=".JexoPlayer" />
+
+        <receiver android:name="com.jschartner.youtubebase.JexoPlayer" />
         <service
-            android:name=".JexoPlayer$MediaService"
+            android:name="com.jschartner.youtubebase.JexoPlayer$MediaService"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.media.browse.MediaBrowserService" />
